# example_rust_python

./: Cargo.toml  README.md  pyproject.toml
example/: __main__.py
src/: lib.rs
